fixed hero mis-alignment

--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -35,7 +35,8 @@ body
       display: block
     .black
       display: none
-
+  [role="page-container"]
+    padding-top: 0px
 
 .logo
   position: absolute
